--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "date-a-scientist"
-version = "0.1.10"
+version = "0.1.11"
 description = "Query dataframes, find issue with your notebook snippets as if a professional data scientist was pair coding with you"
 authors = ["IMPRV Dev Team <dev@imprv.ai>"]
 readme = "README.md"
@@ -20,6 +20,7 @@ python = "^3.10"
 pandasai = "^2.2.8"
 pygments = "^2.18.0"
 numpy = "1.26.4"
+validators = "^0.31.0"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^24.3.0"}
@@ -39,6 +40,8 @@ types-pygments = "^2.18.0.20240506"
 flake8 = "^7.1.0"
 isort = "^5.13.2"
 pytest-timeout = "^2.3.1"
+ipykernel = "^6.29.5"
+types-requests = "^2.32.0.20240622"
 
 [build-system]
 requires = ["poetry-core"]
