fix issue with cache being shared by instances and saving broken responses

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ MANIFEST
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+.date_a_scientist_cache_*
 
 # Unit test / coverage reports
 htmlcov/
